fixed broken right align

--- a/style.css
+++ b/style.css
@@ -211,6 +211,14 @@ p a:hover, li a:hover {
 	transition: opacity 0.2s;
 }
 
+.nav-wrapper {
+	text-align: center;
+}
+
+.contact-wrapper {
+	text-align: center;
+}
+
 #carousel-control a img {
 	width: 15px;
 	margin-top: 20px;
